compiler/src/generated/grammar/HopperParser.js
// Generated from grammar/Hopper.g4 by ANTLR 4.13.1
// jshint ignore: start
import antlr4 from 'antlr4';
import HopperListener from './HopperListener.js';
import HopperVisitor from './HopperVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class HopperParser extends antlr4.Parser {

    static grammarFileName = "Hopper.g4";
    static literalNames = [ null, "'import'", "'entry'", "'='", "'const'", 
                            "'alias'", "'extern'", "'function'", "'('", 
                            "')'", "'struct'", "'{'", "'}'", "'pad'", "'template'", 
                            "'<'", "','", "'>'", "'class'", "'operator'", 
                            "'constructor'", "'destructor'", "'value'", 
                            "'address'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                            "'=='", "'!='", "'<='", "'>='", "'&'", "'|'", 
                            "'^'", "'<<'", "'>>'", "'['", "']'", "'...'", 
                            "'int'", "'bool'", "'float'", "'byte'", "'String'", 
                            "'unsigned'", "'.'", "'::'", "'if'", "'else'", 
                            "'while'", "'for'", "';'", "'break'", "'continue'", 
                            "'return'", "'defer'", "'||'", "'&&'", "'!'", 
                            "'~'", "'cast'", "'true'", "'false'", "'null'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, "IntegerLiteral", "HexLiteral", 
                             "FloatLiteral", "StringLiteral", "CharLiteral", 
                             "Identifier", "NEWLINE", "LINE_COMMENT", "WS" ];
    static ruleNames = [ "program", "topLevelDecl", "importDecl", "entryDecl", 
                         "constDecl", "aliasDecl", "functionDecl", "structDecl", 
                         "structMember", "templateDecl", "classDecl", "classMember", 
                         "fieldName", "operatorSymbol", "paramList", "externParamList", 
                         "param", "type", "block", "statement", "forInit", 
                         "forUpdate", "expression", "logicalOr", "logicalAnd", 
                         "bitwiseOr", "bitwiseXor", "bitwiseAnd", "equality", 
                         "relational", "shift", "additive", "multiplicative", 
                         "unary", "primary", "argList", "literal" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = HopperParser.ruleNames;
        this.literalNames = HopperParser.literalNames;
        this.symbolicNames = HopperParser.symbolicNames;
    }



	program() {
	    let localctx = new ProgramContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, HopperParser.RULE_program);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 77;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===72) {
	            this.state = 74;
	            this.match(HopperParser.NEWLINE);
	            this.state = 79;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 89;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 279798) !== 0)) {
	            this.state = 80;
	            this.topLevelDecl();
	            this.state = 84;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===72) {
	                this.state = 81;
	                this.match(HopperParser.NEWLINE);
	                this.state = 86;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 91;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 92;
	        this.match(HopperParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	topLevelDecl() {
	    let localctx = new TopLevelDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, HopperParser.RULE_topLevelDecl);
	    try {
	        this.state = 102;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 6:
	        case 7:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 94;
	            this.functionDecl();
	            break;
	        case 10:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 95;
	            this.structDecl();
	            break;
	        case 18:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 96;
	            this.classDecl();
	            break;
	        case 14:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 97;
	            this.templateDecl();
	            break;
	        case 4:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 98;
	            this.constDecl();
	            break;
	        case 1:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 99;
	            this.importDecl();
	            break;
	        case 5:
	            this.enterOuterAlt(localctx, 7);
	            this.state = 100;
	            this.aliasDecl();
	            break;
	        case 2:
	            this.enterOuterAlt(localctx, 8);
	            this.state = 101;
	            this.entryDecl();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	importDecl() {
	    let localctx = new ImportDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, HopperParser.RULE_importDecl);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 104;
	        this.match(HopperParser.T__0);
	        this.state = 105;
	        this.match(HopperParser.StringLiteral);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	entryDecl() {
	    let localctx = new EntryDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, HopperParser.RULE_entryDecl);
	    try {
	        this.state = 114;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,4,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new EntryBlockContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 107;
	            this.match(HopperParser.T__1);
	            this.state = 108;
	            this.match(HopperParser.Identifier);
	            this.state = 109;
	            this.block();
	            break;

	        case 2:
	            localctx = new EntryAddrContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 110;
	            this.match(HopperParser.T__1);
	            this.state = 111;
	            this.match(HopperParser.Identifier);
	            this.state = 112;
	            this.match(HopperParser.T__2);
	            this.state = 113;
	            this.expression();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	constDecl() {
	    let localctx = new ConstDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, HopperParser.RULE_constDecl);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 116;
	        this.match(HopperParser.T__3);
	        this.state = 117;
	        this.match(HopperParser.Identifier);
	        this.state = 118;
	        this.match(HopperParser.T__2);
	        this.state = 119;
	        this.literal();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	aliasDecl() {
	    let localctx = new AliasDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, HopperParser.RULE_aliasDecl);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 121;
	        this.match(HopperParser.T__4);
	        this.state = 122;
	        this.match(HopperParser.Identifier);
	        this.state = 123;
	        this.match(HopperParser.T__2);
	        this.state = 124;
	        this.type();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	functionDecl() {
	    let localctx = new FunctionDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, HopperParser.RULE_functionDecl);
	    var _la = 0;
	    try {
	        this.state = 161;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,9,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new ExternFuncDeclContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 126;
	            this.match(HopperParser.T__5);
	            this.state = 127;
	            this.match(HopperParser.T__6);
	            this.state = 128;
	            this.match(HopperParser.Identifier);
	            this.state = 129;
	            this.match(HopperParser.T__7);
	            this.state = 131;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===23 || ((((_la - 40)) & ~0x1f) === 0 && ((1 << (_la - 40)) & 2147483775) !== 0)) {
	                this.state = 130;
	                this.externParamList();
	            }

	            this.state = 133;
	            this.match(HopperParser.T__8);
	            this.state = 134;
	            this.type();
	            break;

	        case 2:
	            localctx = new ExternProcDeclContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 135;
	            this.match(HopperParser.T__5);
	            this.state = 136;
	            this.match(HopperParser.T__6);
	            this.state = 137;
	            this.match(HopperParser.Identifier);
	            this.state = 138;
	            this.match(HopperParser.T__7);
	            this.state = 140;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===23 || ((((_la - 40)) & ~0x1f) === 0 && ((1 << (_la - 40)) & 2147483775) !== 0)) {
	                this.state = 139;
	                this.externParamList();
	            }

	            this.state = 142;
	            this.match(HopperParser.T__8);
	            break;

	        case 3:
	            localctx = new FuncDeclContext(this, localctx);
	            this.enterOuterAlt(localctx, 3);
	            this.state = 143;
	            this.match(HopperParser.T__6);
	            this.state = 144;
	            this.match(HopperParser.Identifier);
	            this.state = 145;
	            this.match(HopperParser.T__7);
	            this.state = 147;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===23 || ((((_la - 41)) & ~0x1f) === 0 && ((1 << (_la - 41)) & 1073741887) !== 0)) {
	                this.state = 146;
	                this.paramList();
	            }

	            this.state = 149;
	            this.match(HopperParser.T__8);
	            this.state = 150;
	            this.type();
	            this.state = 151;
	            this.block();
	            break;

	        case 4:
	            localctx = new ProcDeclContext(this, localctx);
	            this.enterOuterAlt(localctx, 4);
	            this.state = 153;
	            this.match(HopperParser.T__6);
	            this.state = 154;
	            this.match(HopperParser.Identifier);
	            this.state = 155;
	            this.match(HopperParser.T__7);
	            this.state = 157;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===23 || ((((_la - 41)) & ~0x1f) === 0 && ((1 << (_la - 41)) & 1073741887) !== 0)) {
	                this.state = 156;
	                this.paramList();
	            }

	            this.state = 159;
	            this.match(HopperParser.T__8);
	            this.state = 160;
	            this.block();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	structDecl() {
	    let localctx = new StructDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, HopperParser.RULE_structDecl);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 163;
	        this.match(HopperParser.T__9);
	        this.state = 164;
	        this.match(HopperParser.Identifier);
	        this.state = 165;
	        this.match(HopperParser.T__10);
	        this.state = 169;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===72) {
	            this.state = 166;
	            this.match(HopperParser.NEWLINE);
	            this.state = 171;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 190;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===13 || _la===23 || ((((_la - 41)) & ~0x1f) === 0 && ((1 << (_la - 41)) & 1073741887) !== 0)) {
	            this.state = 172;
	            this.structMember();
	            this.state = 181;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,12,this._ctx)
	            while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1) {
	                    this.state = 174; 
	                    this._errHandler.sync(this);
	                    _la = this._input.LA(1);
	                    do {
	                        this.state = 173;
	                        this.match(HopperParser.NEWLINE);
	                        this.state = 176; 
	                        this._errHandler.sync(this);
	                        _la = this._input.LA(1);
	                    } while(_la===72);
	                    this.state = 178;
	                    this.structMember(); 
	                }
	                this.state = 183;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,12,this._ctx);
	            }

	            this.state = 187;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===72) {
	                this.state = 184;
	                this.match(HopperParser.NEWLINE);
	                this.state = 189;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	        }

	        this.state = 192;
	        this.match(HopperParser.T__11);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	structMember() {
	    let localctx = new StructMemberContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, HopperParser.RULE_structMember);
	    try {
	        this.state = 199;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 23:
	        case 41:
	        case 42:
	        case 43:
	        case 44:
	        case 45:
	        case 46:
	        case 71:
	            localctx = new StructFieldContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 194;
	            this.type();
	            this.state = 195;
	            this.fieldName();
	            break;
	        case 13:
	            localctx = new StructPadContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 197;
	            this.match(HopperParser.T__12);
	            this.state = 198;
	            this.match(HopperParser.IntegerLiteral);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	templateDecl() {
	    let localctx = new TemplateDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, HopperParser.RULE_templateDecl);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 201;
	        this.match(HopperParser.T__13);
	        this.state = 202;
	        this.match(HopperParser.Identifier);
	        this.state = 203;
	        this.match(HopperParser.T__14);
	        this.state = 204;
	        this.match(HopperParser.Identifier);
	        this.state = 209;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===16) {
	            this.state = 205;
	            this.match(HopperParser.T__15);
	            this.state = 206;
	            this.match(HopperParser.Identifier);
	            this.state = 211;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 212;
	        this.match(HopperParser.T__16);
	        this.state = 213;
	        this.match(HopperParser.T__10);
	        this.state = 217;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===72) {
	            this.state = 214;
	            this.match(HopperParser.NEWLINE);
	            this.state = 219;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 238;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) === 0 && ((1 << _la) & 12058752) !== 0) || ((((_la - 41)) & ~0x1f) === 0 && ((1 << (_la - 41)) & 1073741887) !== 0)) {
	            this.state = 220;
	            this.classMember();
	            this.state = 229;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,19,this._ctx)
	            while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1) {
	                    this.state = 222; 
	                    this._errHandler.sync(this);
	                    _la = this._input.LA(1);
	                    do {
	                        this.state = 221;
	                        this.match(HopperParser.NEWLINE);
	                        this.state = 224; 
	                        this._errHandler.sync(this);
	                        _la = this._input.LA(1);
	                    } while(_la===72);
	                    this.state = 226;
	                    this.classMember(); 
	                }
	                this.state = 231;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,19,this._ctx);
	            }

	            this.state = 235;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===72) {
	                this.state = 232;
	                this.match(HopperParser.NEWLINE);
	                this.state = 237;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	        }

	        this.state = 240;
	        this.match(HopperParser.T__11);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	classDecl() {
	    let localctx = new ClassDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, HopperParser.RULE_classDecl);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 242;
	        this.match(HopperParser.T__17);
	        this.state = 243;
	        this.match(HopperParser.Identifier);
	        this.state = 244;
	        this.match(HopperParser.T__10);
	        this.state = 248;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===72) {
	            this.state = 245;
	            this.match(HopperParser.NEWLINE);
	            this.state = 250;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 269;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) === 0 && ((1 << _la) & 12058752) !== 0) || ((((_la - 41)) & ~0x1f) === 0 && ((1 << (_la - 41)) & 1073741887) !== 0)) {
	            this.state = 251;
	            this.classMember();
	            this.state = 260;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,24,this._ctx)
	            while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1) {
	                    this.state = 253; 
	                    this._errHandler.sync(this);
	                    _la = this._input.LA(1);
	                    do {
	                        this.state = 252;
	                        this.match(HopperParser.NEWLINE);
	                        this.state = 255; 
	                        this._errHandler.sync(this);
	                        _la = this._input.LA(1);
	                    } while(_la===72);
	                    this.state = 257;
	                    this.classMember(); 
	                }
	                this.state = 262;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,24,this._ctx);
	            }

	            this.state = 266;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===72) {
	                this.state = 263;
	                this.match(HopperParser.NEWLINE);
	                this.state = 268;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	        }

	        this.state = 271;
	        this.match(HopperParser.T__11);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	classMember() {
	    let localctx = new ClassMemberContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, HopperParser.RULE_classMember);
	    var _la = 0;
	    try {
	        this.state = 313;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,30,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new ClassFieldContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 273;
	            this.type();
	            this.state = 274;
	            this.fieldName();
	            break;

	        case 2:
	            localctx = new ClassMethodContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 276;
	            this.match(HopperParser.T__6);
	            this.state = 277;
	            this.match(HopperParser.Identifier);
	            this.state = 278;
	            this.match(HopperParser.T__7);
	            this.state = 280;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===23 || ((((_la - 41)) & ~0x1f) === 0 && ((1 << (_la - 41)) & 1073741887) !== 0)) {
	                this.state = 279;
	                this.paramList();
	            }

	            this.state = 282;
	            this.match(HopperParser.T__8);
	            this.state = 283;
	            this.type();
	            this.state = 284;
	            this.block();
	            break;

	        case 3:
	            localctx = new ClassProcMethodContext(this, localctx);
	            this.enterOuterAlt(localctx, 3);
	            this.state = 286;
	            this.match(HopperParser.T__6);
	            this.state = 287;
	            this.match(HopperParser.Identifier);
	            this.state = 288;
	            this.match(HopperParser.T__7);
	            this.state = 290;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===23 || ((((_la - 41)) & ~0x1f) === 0 && ((1 << (_la - 41)) & 1073741887) !== 0)) {
	                this.state = 289;
	                this.paramList();
	            }

	            this.state = 292;
	            this.match(HopperParser.T__8);
	            this.state = 293;
	            this.block();
	            break;

	        case 4:
	            localctx = new ClassOperatorContext(this, localctx);
	            this.enterOuterAlt(localctx, 4);
	            this.state = 294;
	            this.match(HopperParser.T__18);
	            this.state = 295;
	            this.operatorSymbol();
	            this.state = 296;
	            this.match(HopperParser.T__7);
	            this.state = 297;
	            this.param();
	            this.state = 298;
	            this.match(HopperParser.T__8);
	            this.state = 299;
	            this.type();
	            this.state = 300;
	            this.block();
	            break;

	        case 5:
	            localctx = new ClassConstructorContext(this, localctx);
	            this.enterOuterAlt(localctx, 5);
	            this.state = 302;
	            this.match(HopperParser.T__19);
	            this.state = 303;
	            this.match(HopperParser.T__7);
	            this.state = 305;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===23 || ((((_la - 41)) & ~0x1f) === 0 && ((1 << (_la - 41)) & 1073741887) !== 0)) {
	                this.state = 304;
	                this.paramList();
	            }

	            this.state = 307;
	            this.match(HopperParser.T__8);
	            this.state = 308;
	            this.block();
	            break;

	        case 6:
	            localctx = new ClassDestructorContext(this, localctx);
	            this.enterOuterAlt(localctx, 6);
	            this.state = 309;
	            this.match(HopperParser.T__20);
	            this.state = 310;
	            this.match(HopperParser.T__7);
	            this.state = 311;
	            this.match(HopperParser.T__8);
	            this.state = 312;
	            this.block();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	fieldName() {
	    let localctx = new FieldNameContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, HopperParser.RULE_fieldName);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 315;
	        _la = this._input.LA(1);
	        if(!(_la===22 || _la===23 || _la===71)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


